fix(hero): Remove gap between media and caption

--- a/css/global/base.css
+++ b/css/global/base.css
@@ -32,6 +32,7 @@
 
 	figcaption {
 		background: var(--color-HighlightBackground);
+		font-size: 1rem;
 		padding-block: 0.75em;
 		padding-inline: 1em;
 
